# serverless-playground

./: .gitignore  Makefile  README.md  pyproject.toml  serverless.yml
application/book/: application_call.py
application/book/functions/: create_book.py  get_book_by_id.py
application/book/response/: get_book_response.py
application/functions/: create_book.py  get_book_by_id.py
application/gateway/: api_gateway.py
books/application/: application_call.py
books/application/functions/: add_cover_image_handler.py  create_book.py  get_book_by_id.py
books/application/functions/request/: add_book_cover_image.py  create_book_request.py
books/application/functions/response/: create_book_response.py  get_book_response.py
books/core/domain/: book.py
books/core/domain/exceptions/: book_not_found_exception.py
books/core/usecases/: add_cover_image_usecase.py  create_book_usecase.py  find_book_usecase.py
books/domain/: book.py
books/domain/usecases/: create_book_usecase.py  find_book_usecase.py
books/infrastructure/: book_repository.py  bucket_repository.py
core/domain/: book.py  create_book_use_case.py
domain/: book.py
domain/usecases/: create_book_use_case.py  create_book_usecase.py  find_book_usecase.py
infrastructure/: book_repository.py
repository/: book_repository.py
tests/domain/: test_find_book_usecase.py
tests/integration/: test_get_book_by_id.py
web/book/functions/: create_book.py  get_book_by_id.py
web/book/request/: create_book_request.py
web/book/response/: create_book_response.py  get_book_response.py
(+6 files in other folders)
