[tool.poetry]
name = "serverless-playground"
version = "0.1.0"
description = ""
authors = ["Vinicius <vinigmoraes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
